--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -25,6 +25,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.xml.transform.dom; \
  javax.xml.transform.stream; \
  sun.security.action; \
+ sun.misc; \
+ javax.net; \
  javax.net.ssl; \
  javax.naming; \
  javax.naming.directory; \
