--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -9,6 +9,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.table; \
  org.w3c.dom; \
  org.xml.sax; \
+ sun.misc; \
  sun.security.action; \
  javax.xml.parsers;\
  org.apache.xml.serializer;\
@@ -21,6 +22,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.sound.sampled; \
  javax.naming; \
  javax.naming.directory; \
+ javax.net; \
  javax.net.ssl;
 
 #
