Temporaly remove yahoo tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2197 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -13,9 +13,9 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
  IcqProtocolProviderSlick \
- YahooProtocolProviderSlick \ 
  MsnProtocolProviderSlick
- 
+
+# YahooProtocolProviderSlick \
 # MediaServiceLick \
 
 # Set the name of the meta contact list file to use during testing so that
