make sure we copy os-specific bundles to sc-bundles before running the tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2199 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -637,6 +637,14 @@
         depends="prepare-single-test,prepare-all-tests,clean-test-reports"
         description="Starts felix and runs selected Service Impl Compatibility Kits.">
 
+        <!-- brefore we run the tests, make sure we copy os-specific bundles
+             from sc-bundles/osname to its parent sc-bundles-->
+        <copy todir="${bundles.dest}">
+            <fileset dir="${bundles.dest.os}">
+                <include name="**/*.jar"/>
+            </fileset>
+        </copy>
+
         <!-- Do the testing itself. Note that we don't fail on error as we need
              to generate an html report before leaving this target.-->
         <java classname="org.apache.felix.main.Main"
