Changed icons for Debian package (using svg)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2200 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -43,7 +43,9 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/sip-communicator.
-	cp debian/sc-logo-32x32.xpm debian/sip-communicator/usr/share/pixmaps/sip-communicator.xpm
+	cp debian/sip-communicator-32.xpm debian/sip-communicator/usr/share/pixmaps/
+	cp debian/sip-communicator-16.xpm debian/sip-communicator/usr/share/pixmaps/
+	cp debian/sip-communicator.svg debian/sip-communicator/usr/share/pixmaps/
 	cp debian/sip-communicator.desktop debian/sip-communicator/usr/share/applications/
 	cp $(BASEDIR)/lib/kxml-min.jar debian/sip-communicator/usr/share/sip-communicator/lib
 	cp $(BASEDIR)/lib/jdic-all.jar debian/sip-communicator/usr/share/sip-communicator/lib
