--- a/resources/install/debian/sip-communicator.desktop
+++ b/resources/install/debian/sip-communicator.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=SIP Communicator
 GenericName=SIP Communicator
 Comment=VoIP and Instant Messaging client
-Icon=/usr/share/pixmaps/sip-communicator.xpm
+Icon=/usr/share/pixmaps/sip-communicator.svg
 Type=Application
 Categories=Application;Network;
 Exec=sip-communicator
