--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -47,13 +47,13 @@ install: build
 	cp debian/sip-communicator-16.xpm debian/sip-communicator/usr/share/pixmaps/
 	cp debian/sip-communicator.svg debian/sip-communicator/usr/share/pixmaps/
 	cp debian/sip-communicator.desktop debian/sip-communicator/usr/share/applications/
-	cp $(BASEDIR)/lib/kxml-min.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/jdic-all.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/felix.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/servicebinder.jar debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/resources/install/logging.properties debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/felix.client.run.properties debian/sip-communicator/usr/share/sip-communicator/lib
-	cp $(BASEDIR)/lib/os-specific/linux/*.* debian/sip-communicator/usr/share/sip-communicator/lib/os-specific
+	cp $(BASEDIR)/lib/kxml-min.jar debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/jdic-all.jar debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/felix.jar debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/servicebinder.jar debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/resources/install/logging.properties debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/felix.client.run.properties debian/sip-communicator/usr/share/sip-communicator/lib/
+	cp $(BASEDIR)/lib/os-specific/linux/jdic_stub.jar debian/sip-communicator/usr/share/sip-communicator/lib/
 	cp -r $(BASEDIR)/lib/native/linux debian/sip-communicator/usr/share/sip-communicator/lib/native
 	rm -rf debian/sip-communicator/usr/share/sip-communicator/lib/native/CVS
 	cp $(BASEDIR)/lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar debian/sip-communicator/usr/share/sip-communicator/lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
