--- a/build.xml
+++ b/build.xml
@@ -520,6 +520,14 @@
             if="dpkg.build.present"
             description="Create a .deb package for Debian (needs dpkg utilities)">
 
+      <!-- brefore we build, make sure we copy os-specific bundles from
+           sc-bundles/linux to its parent sc-bundles-->
+      <copy todir="${bundles.dest}">
+          <fileset dir="${bundles.dest.lin}">
+              <include name="**/*.jar"/>
+          </fileset>
+      </copy>
+
       <!-- Prepare the changelog file for the version number -->
       <copy file="${inst.resrc}/debian/changelog.tmpl"
           tofile="${inst.resrc}/debian/changelog"
