--- a/build.xml
+++ b/build.xml
@@ -397,7 +397,7 @@
             append="true">felix.auto.start.70= reference:file:sc-bundles/growlnotification.jar
       </echo>
 
-      <!-- We copy macosx-specific bundles from 
+      <!-- We copy macosx-specific bundles from
            sc-bundles/os-specific/macosx to sc-bundles -->
       <copy todir="${bundles.dest}">
             <fileset dir="${bundles.dest.mac}">
@@ -428,7 +428,7 @@
         <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
         <javaproperty name="apple.awt.brushMetalRounded" value="true"/>
         <javaproperty name="apple.awt.showGrowBox" value="false"/>
-        <javaproperty name="java.library.path" 
+        <javaproperty name="java.library.path"
                       value="${dyld.library.path}"/>
 
         <!-- Tell felix to run sip-communicator -->
@@ -529,14 +529,6 @@
     <target name="deb" depends="make"
             if="dpkg.build.present"
             description="Create a .deb package for Debian (needs dpkg utilities)">
-
-      <!-- before we build, make sure we copy os-specific bundles from
-           sc-bundles/linux to its parent sc-bundles-->
-      <copy todir="${bundles.dest}">
-          <fileset dir="${bundles.dest.lin}">
-              <include name="**/*.jar"/>
-          </fileset>
-      </copy>
 
       <!-- Prepare the changelog file for the version number -->
       <copy file="${inst.resrc}/debian/changelog.tmpl"
@@ -983,6 +975,7 @@
     <target name="bundle-media">
         <!-- Creates a bundle containing the impl of the media package and
              the win jmf implementation.-->
+        <echo message="asfd"/>
         <jar
             compress="false" destfile="${bundles.dest.win}/media.jar"
             manifest="src/net/java/sip/communicator/impl/media/media.manifest.mf">
@@ -996,7 +989,7 @@
             <zipfileset src="${lib.noinst}/nist-sdp-1.0.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/jspeex.jar" prefix=""/>
         </jar>
-
+<echo message="asfd"/>
         <!-- Creates a bundle containing the impl of the media package and
              the linux jmf implementation.-->
         <jar
@@ -1011,7 +1004,7 @@
             <zipfileset src="${lib.noinst}/nist-sdp-1.0.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/jspeex.jar" prefix=""/>
         </jar>
-
+<echo message="asfd"/>
         <!-- Creates a bundle containing the impl of the media package and
              the mac jmf implementation.-->
         <jar
@@ -1026,9 +1019,6 @@
             <zipfileset src="${lib.noinst}/nist-sdp-1.0.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/jspeex.jar" prefix=""/>
         </jar>
-
-        <!-- also create a bundle for the operating system that we are
-             currently running and place it inside the sc-bundles directory.-->
 
     </target>
 
