Changelog timestamp should be in en-US locales. Should fix the debian package autobuild.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2211 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -540,7 +540,7 @@
 
       <!-- Put the current date in the changelog -->
       <tstamp>
-        <format property="date" pattern="EEE, d MMM yyyy HH:mm:ss Z"/>
+        <format property="date" pattern="EEE, d MMM yyyy HH:mm:ss Z" locale="en,US"/>
       </tstamp>
       <replace file="${inst.resrc}/debian/changelog"
           token="_DATE_"
