add some debug info to yahoo lib
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2220 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -57,6 +57,8 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # We don't want trace logs from joscar and joustsim
 net.kano.level = FINEST
 
+ymsg.network.level = FINEST
+
 # We don't want trace logs from java-jml
 net.sf.cindy.impl.level = INFO
 
