Changed the selection of some of the jar for the macosx package with a regexp.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2227 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -439,10 +439,7 @@
                       value="logging.properties"/>
 
         <jarfileset dir=".">
-            <include name="${lib}/kxml-min.jar" />
-            <include name="${lib}/felix.jar" />
-            <include name="${lib}/servicebinder.jar" />
-            <include name="${lib}/jdic-all.jar" />
+            <include name="${lib}/*.jar" />
             <include name="${lib.mac}/*.jar" />
             <include name="${lib}/bundle/*.jar" />
             <exclude name="${lib}/bundle/junit.jar" />
