--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -65,6 +65,7 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-jabber.jar \
  reference:file:sc-bundles/protocol-msn.jar \
  reference:file:sc-bundles/protocol-yahoo.jar \
+ reference:file:sc-bundles/protocol-gibberish.jar \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/meta-cl.jar
 
@@ -78,13 +79,14 @@ felix.auto.start.60= \
  felix.auto.start.66= \
  reference:file:sc-bundles/swing-ui.jar \
  reference:file:sc-bundles/systray.jar
- 
+
  felix.auto.start.67= \
  reference:file:sc-bundles/icqaccregwizz.jar \
  reference:file:sc-bundles/sipaccregwizz.jar \
  reference:file:sc-bundles/jabberaccregwizz.jar \
  reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/yahooaccregwizz.jar \
+ reference:file:sc-bundles/gibberishaccregwizz.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
