Added multichat operation set definition and Gibberish protocol implementation. Related issues: Issue #241 , Issue #244, Issue #250
removed all references to icq since this is a jabber wizard


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2314 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/jabberaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/jabberaccregwizz/resources.properties
@@ -1,9 +1,9 @@
 protocolName=Jabber
 protocolDescription=The Jabber protocol
-uin=Jabber id:
+userID=Jabber id:
 password=Password:
 rememberPassword=Remember password
-uinAndPassword=ID and Password
+userIDAndPassword=ID and Password
 advancedOptions=Advanced Options
 ovverideServerOps=Override server default options
 server=Connect Server
