sip protocol icons added to the bundles
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2335 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1114,6 +1114,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/JainSipApi1.2.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/concurrent.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/log4j-1.2.8.jar" prefix=""/>
+        	<zipfileset dir="resources/images/sip"
+        	                prefix="resources/images/sip"/>
         </jar>
     </target>
     <target name="bundle-sip-slick">
