Stop logging from swing
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2340 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -80,4 +80,4 @@ net.java.sip.communicator.impl.gui.level = INFO
 com.xyz.foo.level = SEVERE
 sun.awt.level = INFO
 java.awt.level = INFO
-
+javax.swing.level = INFO
