Fixed path to the MacOSX systray library.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2342 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -141,7 +141,7 @@
     </condition>
 
     <condition property="dyld.library.path"
-        value="${basedir}/${lib}/native/mac:${system.DYLD_LIBRARY_PATH}">
+        value="$JAVAROOT/${lib}/native/mac:${system.DYLD_LIBRARY_PATH}">
         <isset property="is.running.macos"/>
     </condition>
 
