Added gibberish slick to the list of tests executed by nightly builds
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2370 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -14,7 +14,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  JabberProtocolProviderSlick \
  IcqProtocolProviderSlick \
  YahooProtocolProviderSlick \
- MsnProtocolProviderSlick
+ MsnProtocolProviderSlick \
+ GibberishProtocolProviderServiceLick
 
 # MediaServiceLick \
 
