--- a/build.xml
+++ b/build.xml
@@ -848,7 +848,7 @@
         bundle-version,bundle-version-impl,bundle-shutdown,
         bundle-growlnotification,bundle-audionotifier,bundle-plugin-splashscreen,
         bundle-plugin-systray,bundle-browserlauncher,bundle-gibberish,
-        bundle-plugin-gibberishaccregwizz"/>
+        bundle-gibberish-slick,bundle-plugin-gibberishaccregwizz"/>
 
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history">
@@ -1114,8 +1114,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/JainSipApi1.2.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/concurrent.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/log4j-1.2.8.jar" prefix=""/>
-        	<zipfileset dir="resources/images/sip"
-        	                prefix="resources/images/sip"/>
+            <zipfileset dir="resources/images/sip"
+                            prefix="resources/images/sip"/>
         </jar>
     </target>
     <target name="bundle-sip-slick">
@@ -1152,8 +1152,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/joscar-protocol.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/retroweaver-rt-2.0Beta4.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/jsocks-klea.jar" prefix=""/>
-        	<zipfileset dir="resources/images/icq"
-        	                prefix="resources/images/icq"/>
+            <zipfileset dir="resources/images/icq"
+                            prefix="resources/images/icq"/>
         </jar>
     </target>
 
@@ -1191,8 +1191,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/impl/protocol/jabber"/>
             <zipfileset src="${lib.noinst}/smack.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/smackx.jar" prefix=""/>
-        	<zipfileset dir="resources/images/jabber"
-        	                prefix="resources/images/jabber"/>
+            <zipfileset dir="resources/images/jabber"
+                            prefix="resources/images/jabber"/>
         </jar>
     </target>
 
@@ -1219,8 +1219,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/jml-1.0b1.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/cindy.jar" prefix=""/>
             <zipfileset src="${lib.noinst}/commons-logging.jar" prefix=""/>
-        	<zipfileset dir="resources/images/msn"
-        	                prefix="resources/images/msn"/>
+            <zipfileset dir="resources/images/msn"
+                            prefix="resources/images/msn"/>
         </jar>
     </target>
 
@@ -1246,8 +1246,19 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/protocol/yahoo"
                 prefix="net/java/sip/communicator/impl/protocol/yahoo"/>
             <zipfileset src="${lib.noinst}/ymsg_network_v0_61.jar" prefix=""/>
-        	<zipfileset dir="resources/images/yahoo"
-        	                prefix="resources/images/yahoo"/>
+            <zipfileset dir="resources/images/yahoo"
+                            prefix="resources/images/yahoo"/>
+        </jar>
+    </target>
+
+    <!-- BUNDLE-YAHOO-SLICK -->
+    <!-- Creates a bundle containing the slick for the Yahoo protocol provider.-->
+    <target name="bundle-yahoo-slick">
+        <jar compress="false" destfile="${bundles.dest}/protocol-yahoo-slick.jar"
+            manifest="test/net/java/sip/communicator/slick/protocol/yahoo/yahoo.provider.slick.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/yahoo"
+                prefix="net/java/sip/communicator/slick/protocol/yahoo"/>
+            <zipfileset src="${lib.noinst}/ymsg_network_v0_61.jar" prefix=""/>
         </jar>
     </target>
 
@@ -1261,21 +1272,19 @@ javax.swing.event, javax.swing.border"/>
         <!-- zipfileset src="${lib.noinst}/gibberish_stack.jar" prefix=""/-->
         <zipfileset dir="resources/images/gibberish"
                 prefix="resources/images/gibberish"/>
-		</jar>
-    </target>
-
-    <!-- BUNDLE-YAHOO-SLICK -->
-    <!-- Creates a bundle containing the slick for the Yahoo protocol provider.-->
-    <target name="bundle-yahoo-slick">
-
-        <jar compress="false" destfile="${bundles.dest}/protocol-yahoo-slick.jar"
-            manifest="test/net/java/sip/communicator/slick/protocol/yahoo/yahoo.provider.slick.manifest.mf">
-            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/yahoo"
-                prefix="net/java/sip/communicator/slick/protocol/yahoo"/>
-            <zipfileset src="${lib.noinst}/ymsg_network_v0_61.jar" prefix=""/>
         </jar>
     </target>
 
+    <!-- BUNDLE-GIBBERISH-SLICK -->
+    <!-- Creates a bundle containing the slick for the Gibberish protocol
+         provider.-->
+    <target name="bundle-gibberish-slick">
+        <jar compress="false" destfile="${bundles.dest}/protocol-gibberish-slick.jar"
+            manifest="test/net/java/sip/communicator/slick/protocol/gibberish/gibberish.provider.slick.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/gibberish"
+                prefix="net/java/sip/communicator/slick/protocol/gibberish"/>
+        </jar>
+    </target>
 
      <!-- BUNDLE-SWING-UI -->
     <target name="bundle-swing-ui">
@@ -1326,8 +1335,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/icqaccregwizz/icqaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/icqaccregwizz"
                 prefix="net/java/sip/communicator/plugin/icqaccregwizz"/>
-        	<zipfileset dir="resources/images/icq"
-        	                prefix="resources/images/icq"/>
+            <zipfileset dir="resources/images/icq"
+                            prefix="resources/images/icq"/>
         </jar>
     </target>
 
@@ -1338,8 +1347,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/jabberaccregwizz/jabberaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/jabberaccregwizz"
                 prefix="net/java/sip/communicator/plugin/jabberaccregwizz"/>
-        	<zipfileset dir="resources/images/jabber"
-        	                prefix="resources/images/jabber"/>
+            <zipfileset dir="resources/images/jabber"
+                            prefix="resources/images/jabber"/>
         </jar>
     </target>
 
@@ -1350,8 +1359,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/msnaccregwizz/msnaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/msnaccregwizz"
                 prefix="net/java/sip/communicator/plugin/msnaccregwizz"/>
-        	<zipfileset dir="resources/images/msn"
-        	                prefix="resources/images/msn"/>
+            <zipfileset dir="resources/images/msn"
+                            prefix="resources/images/msn"/>
         </jar>
     </target>
 
@@ -1362,8 +1371,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/yahooaccregwizz/yahooaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/yahooaccregwizz"
                 prefix="net/java/sip/communicator/plugin/yahooaccregwizz"/>
-        	<zipfileset dir="resources/images/yahoo"
-        	                prefix="resources/images/yahoo"/>
+            <zipfileset dir="resources/images/yahoo"
+                            prefix="resources/images/yahoo"/>
         </jar>
     </target>
 
@@ -1374,8 +1383,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/sipaccregwizz/sipaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/sipaccregwizz"
                 prefix="net/java/sip/communicator/plugin/sipaccregwizz"/>
-        	<zipfileset dir="resources/images/sip"
-        	                prefix="resources/images/sip"/>
+            <zipfileset dir="resources/images/sip"
+                            prefix="resources/images/sip"/>
         </jar>
     </target>
 
@@ -1387,8 +1396,8 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/gibberishaccregwizz/gibberishaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/gibberishaccregwizz"
                 prefix="net/java/sip/communicator/plugin/gibberishaccregwizz"/>
-        	<zipfileset dir="resources/images/gibberish"
-        	                prefix="resources/images/gibberish"/>
+            <zipfileset dir="resources/images/gibberish"
+                            prefix="resources/images/gibberish"/>
         </jar>
     </target>
 
